--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ window.onload = wrap_img;
       </div>
     </div>
 
-    <div class="social-links"><ul class="social-media-list"><li><a rel="me" href="https://github.com/Ahmed-Khaled-Saleh" title="Ahmed-Khaled-Saleh"><svg class="svg-icon grey"><use xlink:href="/ahmedkhaled/assets/minima-social-icons.svg#github"></use></svg></a></li><li><a rel="me" href="https://twitter.com/fastdotai" title="fastdotai"><svg class="svg-icon grey"><use xlink:href="/ahmedkhaled/assets/minima-social-icons.svg#twitter"></use></svg></a></li></ul>
+    <div class="social-links"><ul class="social-media-list"><li><a rel="me" href="https://github.com/Ahmed-Khaled-Saleh" title="Ahmed-Khaled-Saleh"><svg class="svg-icon grey"><use xlink:href="/ahmedkhaled/assets/minima-social-icons.svg#github"></use></svg></a></li></ul>
 </div>
 
   </div>
