--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
 <link rel="canonical" href="https://ahmed-khaled-saleh.github.io/ahmedkhaled/" />
 <meta property="og:url" content="https://ahmed-khaled-saleh.github.io/ahmedkhaled/" />
 <meta property="og:site_name" content="ahmed Khaled" />
-<meta property="og:image" content="https://ahmed-khaled-saleh.github.io/ahmedkhaled/images/logo.png" />
 <script type="application/ld+json">
-{"url":"https://ahmed-khaled-saleh.github.io/ahmedkhaled/","@type":"WebSite","image":"https://ahmed-khaled-saleh.github.io/ahmedkhaled/images/logo.png","headline":"ahmed Khaled","name":"ahmed Khaled","description":"Computer Science and Software Engineering Stuff.","@context":"https://schema.org"}</script>
+{"url":"https://ahmed-khaled-saleh.github.io/ahmedkhaled/","@type":"WebSite","headline":"ahmed Khaled","name":"ahmed Khaled","description":"Computer Science and Software Engineering Stuff.","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/ahmedkhaled/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://ahmed-khaled-saleh.github.io/ahmedkhaled/feed.xml" title="ahmed Khaled" /><link rel="shortcut icon" type="image/x-icon" href="/ahmedkhaled/images/favicon.ico"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Primer/15.2.0/primer.css" integrity="sha512-xTz2ys4coGAOz8vuV1NcQBkgVmKhsSEtjbqyMJbBHRplFuvKIUo6xhLHpAyPt9mfR6twHJgn9OgVLuqOvjeBhg==" crossorigin="anonymous" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
@@ -83,15 +82,7 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p>This site is built with <a href="https://github.com/fastai/fastpages">fastpages</a>, An easy to use blogging platform with extra features for Jupyter Notebooks.</p>
-
-<p><img src="/ahmedkhaled/images/diagram.png" alt="" title="https://github.com/fastai/fastpages" /></p>
-
-<p><a href="https://github.com/fastai/fastpages">fastpages</a> automates the process of creating blog posts via GitHub Actions, so you don’t have to fuss with conversion scripts.  A full list of features can be found on <a href="https://github.com/fastai/fastpages">GitHub</a>.</p>
-
-<p>You can edit the <code class="language-plaintext highlighter-rouge">index.html</code> file to change this content.</p>
-
-<h1 id="posts">Posts</h1>
+        <div class="home"><h1 id="posts">Posts</h1>
 
 
 
