--- a/about/index.html
+++ b/about/index.html
@@ -14,7 +14,7 @@
 <meta property="og:url" content="https://ahmed-khaled-saleh.github.io/ahmedkhaled/about/" />
 <meta property="og:site_name" content="ahmed Khaled" />
 <script type="application/ld+json">
-{"url":"https://ahmed-khaled-saleh.github.io/ahmedkhaled/about/","@type":"WebSite","headline":"About Me","name":"ahmed Khaled","description":"Computer Science and Software Engineering Stuff.","@context":"https://schema.org"}</script>
+{"description":"Computer Science and Software Engineering Stuff.","url":"https://ahmed-khaled-saleh.github.io/ahmedkhaled/about/","headline":"About Me","@type":"WebSite","name":"ahmed Khaled","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/ahmedkhaled/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://ahmed-khaled-saleh.github.io/ahmedkhaled/feed.xml" title="ahmed Khaled" /><link rel="shortcut icon" type="image/x-icon" href="/ahmedkhaled/images/favicon.ico"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Primer/15.2.0/primer.css" integrity="sha512-xTz2ys4coGAOz8vuV1NcQBkgVmKhsSEtjbqyMJbBHRplFuvKIUo6xhLHpAyPt9mfR6twHJgn9OgVLuqOvjeBhg==" crossorigin="anonymous" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
